--- a/src/components/HomePageCSS/homePage.module.css
+++ b/src/components/HomePageCSS/homePage.module.css
@@ -1,25 +1,51 @@
 .sidePanel {
-    height: min(85vh, 600px);
-    width: min(4vw, 106px);
+    height: 100%;
+    width: 15vw;
     background-color: #acd7f5;
-    border-radius: .6rem;
+    background-color: #111115;
+    border-radius: 0px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-    padding-top: 50px;
-    margin-top: 20px;
-    margin-left: 10px;
+    align-items: flex-start;
+    padding-top: 60px;
+    padding-left: 20px;
+    /* margin-top: 10px; */
+    /* margin-left: 10px; */
+    /* margin-right: 20px; */
+    position: fixed;
+    top: 0px;
+   
   }
-  
+
+  .panel{
+    height: 100vh;
+    width: 20vw;
+    position:sticky;
+    overflow: hidden;
+    top: 0;
+  }
+  .sidePanel a{
+    display: inline-flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    font-size: 15px;
+    color: #FFFFFF;
+    text-decoration: none;
+  }
+
+  .sidePanel a p {
+    margin-left: 5px;
+   }
   .sideIcon {
     width: min(25px, 5vw);
     height: min(25px, 5vw);
     background: transparent;
     margin: 20px 0;
     position: relative;
-    fill: #03a4ff;
-    stroke: #03a4ff;
+    fill: #FFFFFF;
+    stroke: #FFFFFF;
   }
   
   .searchIcon {
@@ -52,20 +78,22 @@
   }
   
   .searchContainer {
-    width: 100%;
-    height: 200px;
-    background-color: #acd7f5;
-    border-radius: .6rem;
-    margin-top: 20px;
-    position: relative;
+    width: 82vw;
+    height: 200px; 
+    /* background-color: #acd7f5; */
+    background-color: #fafafa;
+    border-radius: 10px;
+    /* margin-top: 10px; */
+    position: sticky;
+    top: 0px;
+    z-index: 2;
   }
   
   .container {
     position: relative;
-    width: min(1440px, 100vw);
+    width: 100vw;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
     color: #111115;
     background-color: #fafafa;
   }
@@ -104,8 +132,6 @@
     flex-direction: column;
     display: flex;
     justify-content: flex-end;
-  
-  
   }
   
   .name>p,
@@ -146,13 +172,13 @@
   }
   
   .profiles {
-    width: 90%;
+    width: min(600px, 70vw);
     margin: auto;
     margin-top: 50px;
     display: grid;
      justify-content: center; /* Center the grid horizontally */
     grid-template-columns: repeat(4, 1fr); /* Initially, 4 columns */
-    gap: 10px;
+    gap: 5px;
   }
 
   @media screen and (max-width: 1038px) {
@@ -209,7 +235,7 @@
       flex-direction: column;
       align-items: center;
       margin: auto;
-      width: 95vw;
+      width: 98vw;
     }
   
     .sidePanel {
@@ -221,15 +247,24 @@
       justify-content: space-evenly;
       align-items: center;
       margin: auto;
-      margin-top: 20px;
+      margin-top: 10px;
       padding: 0;
+      position: relative;
     }
-  
+    .panel{
+      width: 95vw;
+      height: fit-content;
+      align-items: center;
+      position: relative;
+    }
+    .sidePanel a{
+      display: none;
+    }
     .searchContainer {
-      width: 95%;
-      border-radius: .6rem;
+      width: 98%;
       margin: auto;
       margin-top: 20px;
+      position: relative;
     }
   
     .categories {
