--- a/src/components/Settings/SettingsCSS/ThemedSettingsCSS/attendance.module.css
+++ b/src/components/Settings/SettingsCSS/ThemedSettingsCSS/attendance.module.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 30px;
-    background: #fff;
 }
 
 
@@ -52,18 +51,17 @@
 }
 
 .submit{
-    background-color: #03a4ff;
-    color: #ffffff;
-    font-size: min(14px, 4vw);
-    width: 140px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    cursor: pointer;
-    padding: 0;
+    padding: 20px;
+    width: 20%;
+    color: #68696A;
+    background: #111115;
+    outline: none;
     border: none;
+    border-radius: 5px;
+    font-size: min(16px, 3vw);  
+    text-align: center;
+    cursor: pointer;
+    margin-top: 30px;
 }
 
 .submit:active{
