--- a/src/components/Settings/SettingsCSS/ThemedSettingsCSS/settingsCat.module.css
+++ b/src/components/Settings/SettingsCSS/ThemedSettingsCSS/settingsCat.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 290px;
     height: 140px;
-    background: #ffffff;
+    background: #111115;
     border-radius: 8px;
     font-size: min(3vw, 14px);
     cursor: pointer;
@@ -17,13 +17,11 @@
 .Container:active{
     background: #787979
 }
-.Container:hover{
-    background: #03a3ff1a;
-}
+
 .Container .Name{
     font-size: min(3vw, 15px);
     margin: 0;
-    color: #111115;
+    color: #ffffff;
   
 }
 
@@ -51,9 +49,7 @@
     background: transparent;
     position: relative;
 }
-.Icon svg{
-    stroke: #111115;
-}
+
 .Cat h4 span {
     padding: 8px 2px;
     background-color: #03a4ff;
