--- a/src/components/Settings/SettingsCSS/ThemedSettingsCSS/update-members.module.css
+++ b/src/components/Settings/SettingsCSS/ThemedSettingsCSS/update-members.module.css
@@ -1,22 +1,19 @@
 .Cont{
-    width: min(95vw, 1240px);
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
+    align-items: center;
+    width: min(95vw, 1200px);
     margin: auto;
 }
-
 .container{
-    background: #f5f5f5;
- 
+    width: 100%;
 }
 .categories{
     margin: auto;
     display: flex;
     flex-direction: row;
-    width: 95%;
-    justify-content: center;
+    width: 90%;
+    justify-content: left;
     margin-top: 40px;
     margin-bottom: 30px;
   }
