--- a/src/components/Settings/SettingsCSS/homestyles.module.css
+++ b/src/components/Settings/SettingsCSS/homestyles.module.css
@@ -1,7 +1,7 @@
 .container{
     display: flex;
     flex-direction: row;
-    background: #ffffff;
+    background: #f5f5f5;
     color: #111115;
     width: 100vw;
 }
@@ -18,6 +18,7 @@
   }
 .title{
     margin: 30px 20px;
+    color: #111115;
 }
 
 .title p{
